--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-pandas
-pyarrow
-seaborn
-scikit-learn
+pandas==2.0.1
+pyarrow==11.0.0
+seaborn==0.12.2
+scikit-learn==1.2.2
+mlflow==2.3.2
+hyperopt==0.2.7
+xgboost==1.7.5
