--- a/best_practices/code/docker-compose.yaml
+++ b/best_practices/code/docker-compose.yaml
@@ -4,10 +4,10 @@ services:
       context: .
     image: ${LOCAL_IMAGE_NAME}
     environment:
-      - PREDICTIONS_STREAM_NAME=ride-predictions
+      - PREDICTIONS_STREAM_NAME=${PREDICTIONS_STREAM_NAME}
       - RUN_ID=a4b217a84e3a44ad870271b75331eb6c
-      - TEST_RUN=True
       - MODEL_LOCATION=/app/model/model.pkl
+      - KINESIS_ENDPOINT_URL=http://kinesis:4566/
     volumes:
       - ./integration-test/model:/app/model
       - ~/.aws:/root/.aws
