--- a/best_practices/code/pyproject.toml
+++ b/best_practices/code/pyproject.toml
@@ -7,3 +7,8 @@ disable = [
     "invalid-name",
     "too-few-public-methods"
 ]
+
+[tool.black]
+line-length = 80
+target-verion = ['py39']
+skip-string-normalization = true
