--- a/best_practices/code/pyproject.toml
+++ b/best_practices/code/pyproject.toml
@@ -12,3 +12,7 @@ disable = [
 line-length = 80
 target-verion = ['py39']
 skip-string-normalization = true
+
+[tool.isort]
+multi_line_output = 3
+length_sort = true
